--- a/.github/workflows/unit-build.yml
+++ b/.github/workflows/unit-build.yml
@@ -34,4 +34,6 @@ jobs:
       run: |
         pytest --cov=pecapiku -s tests/unit
     - name: Codecov-coverage
-      uses: codecov/codecov-action@v1
+      uses: codecov/codecov-action@v3
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
